# semantic-moments

./: .gitignore  README.md  pyproject.toml
src/semantic_moments/: __init__.py  datasets.py  example.py  utils.py
src/semantic_moments/embedders/: __init__.py  base.py  dino.py  videomae.py  vjepa2.py
